[project]
name = "cryptoweather-mcp"
version = "1.0.0"
description = "MCP server for CryptoWeather Bitcoin price prediction AI"
authors = [
    { name = "CryptoWeather Team", email = "satoshi@cryptoweather.xyz" }
]
dependencies = [
    "fastmcp>=0.1.0",
    "requests>=2.28.0",
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["mcp", "bitcoin", "cryptocurrency", "ai", "prediction", "trading", "robo-advisor", "agent", "quant", "chart", "technical"]

[project.urls]
Homepage = "https://cryptoweather.xyz"
Repository = "https://github.com/cryptoweather/cryptoweather-mcp"
Documentation = "https://cryptoweather.xyz"

[project.scripts]
cryptoweather-mcp = "cryptoweather_mcp.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cryptoweather_mcp = ["py.typed"]