[project]
name = "cryptoweather"
version = "1.0.0"
description = "MCP server for CryptoWeather Bitcoin price prediction AI"
authors = [
    { name = "CryptoWeather Team", email = "satoshi@cryptoweather.xyz" }
]
dependencies = [
    "fastmcp>=0.1.0",
    "requests>=2.28.0",
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["mcp", "bitcoin", "cryptocurrency", "ai", "prediction", "trading"]

[project.urls]
Homepage = "https://cryptoweather.xyz"
Repository = "https://github.com/2051project/cryptoweather"
Documentation = "https://cryptoweather.xyz"

[project.scripts]
cryptoweather = "main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["main*"]

[tool.setuptools.py-modules]
main = "main"